--- a/paper/bootswatch.less
+++ b/paper/bootswatch.less
@@ -113,7 +113,6 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  letter-spacing: .1px;
 }
 
 p {
@@ -123,7 +122,6 @@ p {
 input,
 button {
   -webkit-font-smoothing: antialiased;
-  letter-spacing: .1px;
 }
 
 a {
@@ -614,3 +612,12 @@ input[type="checkbox"],
   }
 }
 
+h1 {
+  letter-spacing: -2px;
+}
+h2 {
+  letter-spacing: -1px;
+}
+h3 {
+  letter-spacing: -.5px;
+}
